syntax = "proto3";

package microservice1;

import "git.xenonstack.com/util/golang-boilerplate/grpc-example/micro-service2/pb/micro-service2.proto";
//rpc services

service UserDetails{
  rpc AddUserDetails(UserDetail) returns(AddReply) {}
  rpc GetUserDetails(EmptyRequest) returns(UserDetailInfo) {}
}

//requests and replies
message EmptyRequest { }

message UserDetail{
    string name = 1;
    int64 phone = 2;
}

message UserDetailInfo{
    UserDetail userDetail = 1;
    microservice2.UserInfo userInfo = 2;
}

message AddReply{
  bool error = 1;
  string message = 2;
}
